[ADD] stats page with tracks endpoint
