# supabase/functions/tracks/routes.ts
@@ -1,0 +1,8 @@
+import { getTracks } from "./controllers.ts";
+import { Hono } from "jsr:@hono/hono";
+
+const router = new Hono();
+
+router.get("/", getTracks);
+
+export default router;
